fix icon alignment on card text

--- a/src/index.css
+++ b/src/index.css
@@ -395,6 +395,13 @@ nav a:active {
   font-size: 1.25rem;
 }
 
+.links .link-icon-wrapper {
+  width: 26px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .links .link .icon-text:hover {
   color: var(--redo-cobalt);
   background-color: var(--light-text);
@@ -407,26 +414,7 @@ nav a:active {
   text-decoration: none;
 }
 
-/* .card-wrapper .links .link a span {
-  padding: 4px 8px;
-}
-
-.card-wrapper .links .link a span:hover {
-  background-color: var(--light-text);
-  color: var(--redo-cobalt);
-
-  border-radius: 8px;
-}
-
-.card-wrapper .links .link i {
-  color: var(--light-text);
-  border-radius: 50%;
-  font-size: 30px;
-}
-
-.card-wrapper .links .link i:hover {
-  cursor: pointer;
-} */
+/* profile section */
 
 footer {
   position: absolute;
@@ -481,17 +469,6 @@ footer i:hover {
   .burger-menu {
     display: block;
   }
-
-  /* .card-wrapper {
-    display: flex;
-    flex-direction: column;
-    gap: 0;
-  }
-
-  .card-wrapper .img-wrapper,
-  .card-wrapper .text-wrapper {
-    height: 470px;
-  } */
 
   /* project card section */
   .card-wrapper {
